Closed Bug 1468663 Opened 6 years ago Closed 6 years ago

Preemptively fix unified bustage in layout/generic

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla62
Tracking Status
firefox62 --- fixed

People

(Reporter: dholbert, Assigned: dholbert)

Details

Attachments

(2 files)

Filing this bug to fix some build-bustage that crops up if you delete UNIFIED_ from layout/generic/moz.build.  (previously: bug 1321387, bug 1344954)

Here are the errors being addressed here (which I've pruned to remove duplicate error-output that's all about the same underlying problem):
=======
In file included from ../../../mozilla/layout/generic/MathMLTextRunFactory.cpp:7:
In file included from ../../../mozilla/layout/generic/MathMLTextRunFactory.h:11:
../../../mozilla/layout/generic/nsTextRunTransformations.h:24:32: error: member access into incomplete type 'const nsStyleFont'
    : mFont(aStyle->StyleFont()->mFont)
                               ^

In file included from ../../../mozilla/layout/generic/ScrollbarActivity.cpp:7:
../../../mozilla/layout/generic/ScrollbarActivity.h:110:37: error: no type named 'Element' in namespace 'mozilla::dom'
                               dom::Element* aScrollbar,
                               ~~~~~^

../../../mozilla/layout/generic/nsFloatManager.cpp:2728:35: error: member access into incomplete type 'nsDeviceContext'
  int32_t appUnitsPerDevPixel = dc->AppUnitsPerDevPixel();
                                  ^


../../../mozilla/layout/generic/nsFloatManager.cpp:2875:3: error: unknown type name 'ImgDrawResult'
  ImgDrawResult result =
  ^

../../../mozilla/layout/generic/nsFloatManager.cpp:2883:10: error: use of undeclared identifier 'SourceSurface'
  RefPtr<SourceSurface> sourceSurface = drawTarget->Snapshot();
         ^

In file included from ../../../mozilla/layout/generic/nsFontInflationData.cpp:11:
../../../mozilla/layout/forms/nsTextControlFrame.h:158:3: error: no template named 'UniquePtr'
  UniquePtr<PresState> SaveState() override;
  ^

../../../mozilla/layout/forms/nsTextControlFrame.h:158:13: error: unknown type name 'PresState'; did you mean 'mozilla::PresState'?
  UniquePtr<PresState> SaveState() override;
            ^~~~~~~~~
            mozilla::PresState

In file included from ../../../mozilla/layout/generic/nsGfxScrollFrame.cpp:70:
../../../mozilla/layout/xul/nsSliderFrame.h:21:55: error: unknown type name 'ComputedStyle'
nsIFrame* NS_NewSliderFrame(nsIPresShell* aPresShell, ComputedStyle* aStyle);
                                                      ^


../../../mozilla/layout/generic/nsFrame.cpp:5602:20: error: use of undeclared identifier 'nsFlexContainerFrame'
    flexMainAxis = nsFlexContainerFrame::IsItemInlineAxisMainAxis(this) ?
                   ^

../../../mozilla/layout/generic/nsFrame.cpp:7251:7: error: use of undeclared identifier 'WebRenderUserData'
      WebRenderUserData::SupportsAsyncUpdate(this)) {
      ^
This fixes some of the build-bustage that occurs when we disable unification in layout/generic.
Attachment #8985296 - Attachment description: Bug 1468663 part 2: Add missing #includes, forward-decls, and 'using' statements in layout/generic to fix bustage in non-unified builds. Depends on D1649 → Bug 1468663 part 2: Add missing #includes, forward-decls, and 'using' statements in layout/generic to fix bustage in non-unified builds.
Comment on attachment 8985294 [details]
Bug 1468663 part 1: Fill in missing mozilla:: namespaces in layout headers that are referenced by files in layout/generic.

Emilio Cobos Álvarez [:emilio] has approved the revision.

https://phabricator.services.mozilla.com/D1649
Attachment #8985294 - Flags: review+
Comment on attachment 8985296 [details]
Bug 1468663 part 2: Add missing #includes, forward-decls, and 'using' statements in layout/generic to fix bustage in non-unified builds.

Hmm, phabricator didn't automatically set r? on the second patch here. 

-->Manually setting it. (though no big rush of course)
Attachment #8985296 - Flags: review?(emilio)
Comment on attachment 8985296 [details]
Bug 1468663 part 2: Add missing #includes, forward-decls, and 'using' statements in layout/generic to fix bustage in non-unified builds.

Emilio Cobos Álvarez [:emilio] has approved the revision.

https://phabricator.services.mozilla.com/D1650
Attachment #8985296 - Flags: review+
Attachment #8985296 - Flags: review?(emilio)
Pushed by dholbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a7fb5b0fbc59
part 1: Fill in missing mozilla:: namespaces in layout headers that are referenced by files in layout/generic. r=emilio
Pushed by dholbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2792dcc6b2eb
part 2: Add missing #includes, forward-decls, and 'using' statements in layout/generic to fix bustage in non-unified builds. r=emilio
https://hg.mozilla.org/mozilla-central/rev/a7fb5b0fbc59
https://hg.mozilla.org/mozilla-central/rev/2792dcc6b2eb
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla62
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: