Bug 1468663 part 2: Add missing #includes, forward-decls, and 'using' statements in layout/generic to fix bustage in non-unified builds. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D1650